--- a/scripts/02-Methylation_statistics.Rmd
+++ b/scripts/02-Methylation_statistics.Rmd
@@ -89,6 +89,8 @@ gene.stats.DMGs <- meth_table5x_filtered2_sigDMG %>%
   dplyr::group_by(Sample.ID) %>%
   mutate(median.sample = median(median.gene),
          mean.sample = mean(mean.gene)) %>% ungroup()
+
+gene.stats.DMGs %>% write.csv("data/WGBS/DMG_statistics.csv", row.names = FALSE)
   
 fig2C <- gene.stats.DMGs %>% 
   subset(!meth_exp_group == "ungroup") %>%
@@ -175,7 +177,7 @@ col_labels_df <- heatmap.sample.DMG.df %>% dplyr::select(Sample.ID, meth_exp_gro
   ))
 col_labels <- col_labels_df$color
 
-pdf("data/figures/Heatmap_samples_DMG.pdf")
+pdf("data/figures/Fig2D_Heatmap_samples_DMG.pdf")
 heatmap_df<-
   heatmap.2(All_mat,
           cexCol = 1.5, 
@@ -208,9 +210,9 @@ dev.off()
 
 ## extracting data from heatmapdf
 zscore_df <- as.data.frame(heatmap_df$carpet) ##carpet score is the zscore that goes into the heatmap
-save(zscore_df, file = "data/WGBS/zscore.RData")
-save(heatmap_df, file = "data/WGBS/Heatmap_output.RData")
-save(All_data, file = "data/WGBS/Heatmap_input.RData")
+save(zscore_df, file = "data/WGBS/heatmap/zscore.RData")
+save(heatmap_df, file = "data/WGBS/heatmap/Heatmap_output.RData")
+save(All_data, file = "data/WGBS/heatmap/Heatmap_input.RData")
 ```
 
 ## Principal Components Analysis & PERMANOVA 
@@ -364,5 +366,5 @@ fig2_plots <- plot_grid(treatment_pca, ploidy_pca, fig2C,
           rel_heights = c(2,2,1.7),
           label_size = 18)
 
-ggsave("data/figures/Fig2.jpeg", fig2_plots, width = 5, height = 10)
+ggsave("data/figures/Fig2A-C PCAs.jpeg", fig2_plots, width = 5, height = 10)
 ```
