--- a/scripts/03-Hyper_hypo_methylation.Rmd
+++ b/scripts/03-Hyper_hypo_methylation.Rmd
@@ -25,9 +25,9 @@ library(tidyverse)
 ## Load data 
 
 ```{r}
-load("data/WGBS/zscore.RData") ## zscore_df
-load("data/WGBS/Heatmap_output.RData") ## heatmap_df
-load("data/WGBS/Heatmap_input.RData") ## All_data
+load("data/WGBS/heatmap/zscore.RData") ## zscore_df
+load("data/WGBS/heatmap/Heatmap_output.RData") ## heatmap_df
+load("data/WGBS/heatmap/Heatmap_input.RData") ## All_data
 
 groups <- read.csv("data/metadata/meth_pattern_groups.csv") %>% dplyr::select(-X)
 groups$Sample.ID <- as.character(groups$Sample.ID)
@@ -100,13 +100,13 @@ hypometh_trip1 <- zscore_median %>% filter(T1 < -0.75)
 # Genes that are hypomethylated in Diploidy (and not in Triploidy 2 or Triploidy 1)  = 143 genes
 hypometh_dip <- zscore_median %>% filter(D < -0.75) 
 
-hypermeth_trip2 %>% write.csv("data/WGBS/DMG_hypermeth_triploidy2.csv", row.names = FALSE)
-hypermeth_trip1 %>% write.csv("data/WGBS/DMG_hypermeth_triploidy1.csv", row.names = FALSE)
-hypermeth_dip %>% write.csv("data/WGBS/DMG_hypermeth_diploidy.csv", row.names = FALSE)
+hypermeth_trip2 %>% write.csv("data/WGBS/hyper-hypo methylation/DMG_hypermeth_triploidy2.csv", row.names = FALSE)
+hypermeth_trip1 %>% write.csv("data/WGBS/hyper-hypo methylation/DMG_hypermeth_triploidy1.csv", row.names = FALSE)
+hypermeth_dip %>% write.csv("data/WGBS/hyper-hypo methylation/DMG_hypermeth_diploidy.csv", row.names = FALSE)
 
-hypometh_trip2 %>% write.csv("data/WGBS/DMG_hypometh_triploidy2.csv", row.names = FALSE)
-hypometh_trip1 %>% write.csv("data/WGBS/DMG_hypometh_triploidy1.csv", row.names = FALSE)
-hypometh_dip %>% write.csv("data/WGBS/DMG_hypometh_diploidy.csv", row.names = FALSE)
+hypometh_trip2 %>% write.csv("data/WGBS/hyper-hypo methylation/DMG_hypometh_triploidy2.csv", row.names = FALSE)
+hypometh_trip1 %>% write.csv("data/WGBS/hyper-hypo methylation/DMG_hypometh_triploidy1.csv", row.names = FALSE)
+hypometh_dip %>% write.csv("data/WGBS/hyper-hypo methylation/DMG_hypometh_diploidy.csv", row.names = FALSE)
 ```
 
 Plotting the hyper-meth/hypo-meth levels above 
@@ -147,7 +147,7 @@ subset_gene_list %>%
         axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0), size=12, face="bold"),
         axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0), size=12, face="bold"))
 
-ggsave(filename="data/figures/Zscore_hypometh_diploidy.jpeg", dpi=300, width=3.5, height=5, units="in")
+ggsave(filename="data/figures/Supplemental Figure 4 Zscore_hypometh_diploidy.jpeg", dpi=300, width=3.5, height=5, units="in")
 ```
 
 
